11.md updated from https://stackedit.cn/

--- a/11.md
+++ b/11.md
@@ -28,6 +28,7 @@ $$
 
 2. **垂直方向位置与速度**  
    - 物理意义：z方向位置变化率等于z方向速度  
+   - 动力学层级：运动学方程  
 
 3. **俯仰角与角速度**  
    - 物理意义：俯仰角变化率等于角速度  
@@ -130,5 +131,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTIyNzIyODcsMTI4MTI0NjkzOV19
+eyJoaXN0b3J5IjpbNjk1ODkyNTE2LDEyODEyNDY5MzldfQ==
 -->
