四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -13,9 +13,9 @@
 
 $$
 \begin{aligned}
-y &= v_y \\
-z &= v_z \\
-\phi &= \omega \\
+\dot{y} &= v_y \\
+\dot{z} &= v_z \\
+\dot{y}\phi &= \omega \\
 v_y &= \frac{F \sin \phi}{m} \\
 v_z &= \frac{F \cos \phi}{m} - g \\
 \omega &= -\frac{1}{J} M \\
@@ -131,5 +131,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjk1ODkyNTE2XX0=
+eyJoaXN0b3J5IjpbLTE5NzY1NzI0MDJdfQ==
 -->
