四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -1,4 +1,4 @@
-
+[TOC]
 # 基于PID的四旋翼无人机轨迹跟踪控制
 
 ## 二维笔记说明
@@ -15,7 +15,7 @@ $$
 \begin{aligned}
 \dot{y} &= v_y \\
 \dot{z} &= v_z \\
-\dot{y}\phi &= \omega \\
+\dot{ϕ} &= \omega \\
 v_y &= \frac{F \sin \phi}{m} \\
 v_z &= \frac{F \cos \phi}{m} - g \\
 \omega &= -\frac{1}{J} M \\
@@ -131,5 +131,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NzY1NzI0MDJdfQ==
+eyJoaXN0b3J5IjpbLTIxNDM0Mzc5OV19
 -->
