四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -16,9 +16,9 @@ $$
 \dot{y} &= v_y \\
 \dot{z} &= v_z \\
 \dot{ϕ} &= \omega \\
-v_y &= \frac{F \sin \phi}{m} \\
-v_z &= \frac{F \cos \phi}{m} - g \\
-\omega &= -\frac{1}{J} M \\
+\dot{v_y} &= \frac{F \sin \phi}{m} \\
+\dot{v_z} &= \frac{F \cos \phi}{m} - g \\
+\omega\dot{v_y} &= -\frac{1}{J} M \\
 \end{aligned}
 $$
 
@@ -131,5 +131,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxNDM0Mzc5OV19
+eyJoaXN0b3J5IjpbLTUwNDk0ODI2Ml19
 -->
