四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -18,7 +18,7 @@ $$
 \dot{ϕ} &= \omega \\
 \dot{v_y} &= \frac{F \sin \phi}{m} \\
 \dot{v_z} &= \frac{F \cos \phi}{m} - g \\
-\omega\dot{v_y} &= -\frac{1}{J} M \\
+\dot{ \omega} &= -\frac{1}{J} M \\
 \end{aligned}
 $$
 
@@ -32,13 +32,13 @@ $$
 
 3. **俯仰角与角速度**  
    - 物理意义：俯仰角变化率等于角速度  
-   - 动力学层级：旋转运动学方程  
+   - 动力学层级：运动学方程  
 
 4. **y方向加速度**  
    - 物理意义：由推力的水平分量产生  
    - 关键参数：  
      - \( F \)：旋翼总推力  
-     - \( \phi \)：俯仰角  
+     - \( ϕ \)：俯仰角  
 
 5. **z方向加速度**  
    - 物理意义：由推力的垂直分量减去重力加速度  
@@ -131,5 +131,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUwNDk0ODI2Ml19
+eyJoaXN0b3J5IjpbMTkzODA3NjE3M119
 -->
