--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -42,11 +42,11 @@ $$
 
 5. **z方向加速度**  
    - 物理意义：由推力的垂直分量减去重力加速度  
-   - 关键参数：  
-     - \( g \)：重力加速度  
+   - 关键参数： \( g \)：重力加速度  (向下作用)
+    
 
 6. **角加速度与力矩**  
-   - 物理意义：角加速度由力矩驱动  
+   - 物理意义：角加速度由力矩驱动，负号表⽰⼒矩⽅向与旋转⽅向定义相反
    - 关键参数：  
      - \( M \)：力矩  
      - \( J \)：转动惯量  
@@ -131,5 +131,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkzODA3NjE3M119
+eyJoaXN0b3J5IjpbMTgwMDMxMDM1MV19
 -->
