--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -42,15 +42,16 @@ $$
 
 5. **z方向加速度**  
    - 物理意义：由推力的垂直分量减去重力加速度  
-   - 关键参数： \( g \)：重力加速度  (向下作用)
-    
+   - 关键参数：
+	   -  \( g \)：重力加速度  (向下作用)
+   - 动⼒学层级：平移动⼒学⽅程（含重⼒补偿）
 
 6. **角加速度与力矩**  
-   - 物理意义：角加速度由力矩驱动，负号表⽰⼒矩⽅向与旋转⽅向定义相反
+   - 物理意义：角加速度由力矩驱动，
    - 关键参数：  
      - \( M \)：力矩  
      - \( J \)：转动惯量  
-
+	- 动⼒学层级：旋转动⼒学⽅程（⻆动量定理）
 ---
 
 ### 三、轨迹生成
@@ -131,5 +132,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwMDMxMDM1MV19
+eyJoaXN0b3J5IjpbODM2ODAwMDEyXX0=
 -->
