四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -49,7 +49,7 @@ $$
 6. **角加速度与力矩**  
    - 物理意义：角加速度由力矩驱动，
    - 关键参数：  
-     - \( M \)：力矩  
+     - \( M \)：力矩（控制输⼊）
      - \( J \)：转动惯量  
 	- 动⼒学层级：旋转动⼒学⽅程（⻆动量定理）
 ---
@@ -132,5 +132,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM2ODAwMDEyXX0=
+eyJoaXN0b3J5IjpbLTQ4MTY0ODIwN119
 -->
