四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -4,7 +4,7 @@
 ## 二维笔记说明
 
 ### 一、展示二维平面四旋翼圆形轨迹跟踪（以其为例）
-![二维平面四旋翼圆形轨迹跟踪](/imgs/2025-05-11/IAiCK9XSkvvHyms5.png '二维平面四旋翼圆形轨迹跟踪展示')
+![二维平面四旋翼圆形轨迹跟踪展示](/imgs/2025-05-11/IAiCK9XSkvvHyms5.png '二维平面四旋翼圆形轨迹跟踪展示')
 ---
 
 ### 二、状态方程解读
@@ -132,5 +132,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjExNjQ1MTkwLC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbMTU1ODUzMjY0MSwtNDgxNjQ4MjA3XX0=
 -->
