四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -55,7 +55,11 @@ $$
 ---
 
 ### 三、轨迹生成
+1. ⼀般的轨迹都是以正弦波的形式来⽣成的，即为simulink⾥的Sine Wave模块⽣成，只需要Sine Wave正弦波模块、Outpart输出模块、Mux模块与To Workspace模
+块，较为简单。
 
+如下图展⽰：
+![输入图片说明](/imgs/2025-05-11/xzj3EMEMwFzovrhy.png)
 #### 1. 正弦信号源模块
 - **模块1**：\( 5 \times \sin(u) \)  
   - 功能：生成振幅为5的正弦波信号，输出至端口\( Y \)。
@@ -132,5 +136,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1ODUzMjY0MSwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbMTI3MTA0NTI0NCwtNDgxNjQ4MjA3XX0=
 -->
