四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -60,7 +60,14 @@ $$
 
 如下图展⽰：
 ![轨迹生成(一)](/imgs/2025-05-11/xzj3EMEMwFzovrhy.png '轨迹生成 (一)')
+2. 也可以通过Fcn模块⾃⼰写函数式来定义轨迹的形状，较为推荐此⽅式来进⾏轨迹⽣成
+
+### 讲解：
+
+#### 核⼼模块解析
+
 #### 1. 正弦信号源模块
+
 - **模块1**：\( 5 \times \sin(u) \)  
   - 功能：生成振幅为5的正弦波信号，输出至端口\( Y \)。
 - **模块2**：\( 5 \times \sin(0.5u) \)  
@@ -136,5 +143,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODQwMzgxOTksLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbMTgzNjI5NzMzMiwtNDgxNjQ4MjA3XX0=
 -->
