四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -68,9 +68,11 @@ $$
 
 #### 1. 正弦信号源模块
 
-- **模块1**：\( 5 \times \sin(u) \)  
-  - 功能：生成振幅为5的正弦波信号，输出至端口\( Y \)。
-- **模块2**：\( 5 \times \sin(0.5u) \)  
+- **模块1**：5*sin(u)
+	- 功能：⽣成振幅为5、频率与输⼊ u 相关的正弦波信号。
+
+	- 输出：通过连线连接到输出端⼝ Y （对应右侧的 y_fcn 信号线）。
+- **模块2**：5*sin(0.5*u)
   - 功能：生成频率减半的正弦波，输出至端口\( Z \)。
 
 #### 2. 输出端口
@@ -143,5 +145,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgzNjI5NzMzMiwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbNDk3MTc3MjgzLC00ODE2NDgyMDddfQ==
 -->
