四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -73,9 +73,12 @@ $$
 
 	- 输出：通过连线连接到输出端⼝ Y （对应右侧的 y_fcn 信号线）。
 - **模块2**：5*sin(0.5*u)
-  - 功能：生成频率减半的正弦波，输出至端口\( Z \)。
+  - 功能：⽣成振幅为5、频率为 0.5*u 的正弦波（频率是模块1的⼀半）。
+
+输出：通过连线连接到输出端⼝ Z （对应右侧的 z_fcn 信号线）。
 
 #### 2. 输出端口
+
 - 使用`Scope`模块观测波形，输出至工作空间。
 
 ---
@@ -145,5 +148,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDk3MTc3MjgzLC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbMTI5MjgwMzY5NCwtNDgxNjQ4MjA3XX0=
 -->
