四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -79,7 +79,11 @@ $$
 
 #### 2. 输出端口
 
-- 使用`Scope`模块观测波形，输出至工作空间。
+- Y和Z：将两个正弦信号输出到⼯作空间或外部设备，便于后续分析（可⽤Scope模
+
+块观测波形）。
+
+![轨迹生成(二)](/imgs/2025-05-11/IusBDMldQCvspVqv.png '轨迹生成()')
 
 ---
 
@@ -148,5 +152,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5MjgwMzY5NCwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbLTE5NjA5NDUzMjcsLTQ4MTY0ODIwN119
 -->
