四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -83,11 +83,13 @@ $$
 
 块观测波形）。
 
-![轨迹生成(二)](/imgs/2025-05-11/IusBDMldQCvspVqv.png '轨迹生成()')
+![轨迹生成(二)](/imgs/2025-05-11/IusBDMldQCvspVqv.png '轨迹生成(二)')
 
 ---
 
 ### 四、PID控制器与二维四旋翼动态系统
+
+### 讲解
 
 #### 1. 二维四旋翼动态系统
 - **整体架构**  
@@ -152,5 +154,5 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NjA5NDUzMjcsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
 -->
