四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -95,7 +95,7 @@ $$
 - **整体架构**  
   - 模型名称：`quadrotor2_circle/二维四旋翼动态系统`  
   - 核心模块：  
-    - `quadrotor2_system`：定义物理参数（质量\( m \)、转动惯量\( J \)），通过动力学方程计算状态变量。  
+    - `quadrotor2_system`：初始化定义物理参数（质量\( m \)、转动惯量\( J \)），通过动力学方程计算状态变量。  
     - `state`：存储位置\( (y, z) \)和姿态\( \phi \)，形成闭环反馈。  
 
 - **技术含义**  
@@ -154,5 +154,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbLTI5NDc2NTI2NSwtNDIzNjM0NTUsLTQ4MT
+Y0ODIwN119
 -->
