四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -95,8 +95,11 @@ $$
 - **整体架构**  
   - 模型名称：`quadrotor2_circle/二维四旋翼动态系统`  
   - 核心模块：  
-    - `quadrotor2_system`：初始化定义物理参数（质量\( m \)、转动惯量\( J \)），通过动力学方程计算状态变量。  
-    - `state`：存储位置\( (y, z) \)和姿态\( \phi \)，形成闭环反馈。  
+    - `quadrotor2_system`：初始化定义⻜⾏器物理特性（质量m、转动惯量J），将输⼊的推⼒ F 和⼒矩 M 通过动⼒学⽅程转换为状态变量 state
+
+	- state ：存储和传递状态变量（位置环中的y坐标、z坐标、姿态环的phi⻆度），形成闭环反馈回路。
+
+	- 输⼊输出：通过输⼊模块`力F` 和`力矩M`驱动系统，输出⻜⾏器的实时状态（如位置、姿态）。
 
 - **技术含义**  
   - 状态反馈：实时数据驱动闭环控制。  
@@ -154,6 +157,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NDc2NTI2NSwtNDIzNjM0NTUsLTQ4MT
+eyJoaXN0b3J5IjpbLTc4MDU3NDcxNSwtNDIzNjM0NTUsLTQ4MT
 Y0ODIwN119
 -->
