四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -79,7 +79,7 @@ $$
 
 #### 2. 输出端口
 
-- Y和Z：将两个正弦信号输出到⼯作空间或外部设备，便于后续分析（可⽤Scope模块观测波形）。
+- Y和Z：将两个正弦信号输出到⼯作空间或外部设备，便于后续分析（可⽤`Scope`模块观测波形）。
 
 ![轨迹生成(二)](/imgs/2025-05-11/IusBDMldQCvspVqv.png '轨迹生成(二)')
 
@@ -95,7 +95,7 @@ $$
   - 核心模块：  
     - `quadrotor2_system`：初始化定义⻜⾏器物理特性（质量m、转动惯量J），将输⼊的推⼒ F 和⼒矩 M 通过动⼒学⽅程转换为状态变量`state`
 
-	- `state`：存储和传递状态变量（位置环中的y坐标、z坐标、姿态环的phi⻆度），形成闭环反馈回路。
+	- `state`：存储和传递状态变量（位置环中的y坐标、z坐标、姿态环的ϕ⻆度），形成闭环反馈回路。
 
 	- `输⼊输出`：通过输⼊模块`力F`和`力矩M`驱动系统，输出⻜⾏器的实时状态（如位置、姿态）。
 
@@ -155,6 +155,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTc3OTQzNTgzLC00MjM2MzQ1NSwtNDgxNj
-Q4MjA3XX0=
+eyJoaXN0b3J5IjpbLTEyMDA1NDk2NjksLTQyMzYzNDU1LC00OD
+E2NDgyMDddfQ==
 -->
