--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -71,11 +71,11 @@ $$
 - **模块1**：5*sin(u)
 	- 功能：⽣成振幅为5、频率与输⼊ u 相关的正弦波信号。
 
-	- 输出：通过连线连接到输出端⼝ Y （对应右侧的 y_fcn 信号线）。
+	- 输出：通过连线连接到输出端⼝ Y （对应右侧的`y_fcn`信号线）。
 - **模块2**：5 * sin(0.5 * u)
   - 功能：⽣成振幅为5、频率为 0.5*u 的正弦波（频率是模块1的⼀半）。
 
-输出：通过连线连接到输出端⼝ Z （对应右侧的 z_fcn 信号线）。
+输出：通过连线连接到输出端⼝ Z （对应右侧的`z_fcn`信号线）。
 
 #### 2. 输出端口
 
@@ -155,6 +155,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMDA1NDk2NjksLTQyMzYzNDU1LC00OD
-E2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbNzg4MTUyNTM5LC00MjM2MzQ1NSwtNDgxNj
+Q4MjA3XX0=
 -->
