四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -60,7 +60,7 @@ $$
 
 如下图展⽰：
 ![轨迹生成(一)](/imgs/2025-05-11/xzj3EMEMwFzovrhy.png '轨迹生成 (一)')
-2. 也可以通过Fcn模块⾃⼰写函数式来定义轨迹的形状，较为推荐此⽅式来进⾏轨迹⽣成
+2. 也可以通过`Fcn`模块⾃⼰写函数式来定义轨迹的形状，较为推荐此⽅式来进⾏轨迹⽣成
 
 ### 讲解：
 
@@ -69,7 +69,7 @@ $$
 #### 1. 正弦信号源模块
 
 - **模块1**：5*sin(u)
-	- 功能：⽣成振幅为5、频率与输⼊ u 相关的正弦波信号。
+	- 功能：⽣成振幅为5、频率与输⼊`u`相关的正弦波信号。
 
 	- 输出：通过连线连接到输出端⼝ Y （对应右侧的`y_fcn`信号线）。
 - **模块2**：5 * sin(0.5 * u)
@@ -155,6 +155,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzg4MTUyNTM5LC00MjM2MzQ1NSwtNDgxNj
-Q4MjA3XX0=
+eyJoaXN0b3J5IjpbMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MT
+Y0ODIwN119
 -->
