四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -103,7 +103,7 @@ $$
   - 状态反馈：实时数据驱动闭环控制。  
 
 #### 2. PID控制器设计
-- **整体架构**  
+(1) **整体架构**  
   - 双闭环控制：外环（位置误差）和内环（姿态响应）。  
   - 核心模块：  
     - PID模块：处理高度和横向位置误差。  
@@ -155,6 +155,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MT
-Y0ODIwN119
+eyJoaXN0b3J5IjpbLTE4NzYxOTY4ODYsMTE1NDY3OTgzNywtND
+IzNjM0NTUsLTQ4MTY0ODIwN119
 -->
