四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -90,14 +90,22 @@ $$
 ### 讲解
 
 #### 1. 二维四旋翼动态系统
-- **整体架构**  
+
+(1) **整体架构**
+  
   - 模型名称：`quadrotor2_circle/二维四旋翼动态系统`  
+
   - 核心模块：  
     - `quadrotor2_system`：初始化定义⻜⾏器物理特性（质量m、转动惯量J），将输⼊的推⼒ F 和⼒矩 M 通过动⼒学⽅程转换为状态变量`state`
 
 	- `state`：存储和传递状态变量（位置环中的y坐标、z坐标、姿态环的ϕ⻆度），形成闭环反馈回路。
 
 	- `输⼊输出`：通过输⼊模块`力F`和`力矩M`驱动系统，输出⻜⾏器的实时状态（如位置、姿态）。
+
+ (2). 关键参数与设计
+
+- 信号流逻辑：
+
 
 - **技术含义**  
   - 状态反馈：实时数据驱动闭环控制。  
@@ -155,6 +163,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NzYxOTY4ODYsMTE1NDY3OTgzNywtND
+eyJoaXN0b3J5IjpbLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtND
 IzNjM0NTUsLTQ4MTY0ODIwN119
 -->
