--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -106,7 +106,25 @@ $$
 
 - 信号流逻辑：
 
-
+flowchart TD
+    A["输入力F/力矩M"] --> B[动力学方程计算]
+    B --> C[quadrotor2_system]
+    C --> D["输出状态变量state"]
+    D --> E[反馈至PID控制器]
+    
+    C -. 形成闭环 .-> F
+    F -.-> A
+    
+    classDef solid fill:#f0f0f0,stroke:#333,stroke-width:2px;
+    classDef dashed fill:#fff,stroke-dasharray:5;
+    class A,B,C,D,E solid;
+    class F dashed;
+    
+    %% 闭环虚线部分说明
+    subgraph 闭环系统
+    F[形成闭环]
+    end
+   
 - **技术含义**  
   - 状态反馈：实时数据驱动闭环控制。  
 
@@ -163,6 +181,6 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtND
-IzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMT
+E1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
