四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -106,25 +106,14 @@ $$
 
 - 信号流逻辑：
 
+```mermaid
+graph TD
+    A[输入力 F/力矩 M] --> B[quadrotor2_system]
+    B --> C[输出状态变量 state]
+    C --> D[反馈至 PID 控制器]
+    D --> A
+    B --> A
 ```
-flowchart TD
-    A[("力F/力矩M（输入）")] -->|驱动| B[动力学方程计算]
-    B --> C[[quadrotor2_system]]
-    C --> D[("状态变量 state（输出）")]
-    D -->|实时反馈| E[PID控制器]
-    
-    C -.->|闭环信号| F{形成闭环}
-    F -.-> A
-
-    classDef process fill:#e1f5fe,stroke:#039be5;  %% 主流程节点
-    classDef feedback fill:#fce4ec,stroke:#e91e63; %% 反馈相关元素
-    classDef point stroke-width:0;                %% 圆形端点样式
-    
-    class A,B,C,D,E process;
-    class F feedback;
-    class A,D point;
-```
-
 - **技术含义**  
   - 状态反馈：实时数据驱动闭环控制。  
 
@@ -181,7 +170,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjc4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNT
-I3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgy
-MDddfQ==
+eyJoaXN0b3J5IjpbNTg2MTQ5ODM2LDY3ODUxMDY2OSwtMTQ3OD
+MzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1
+NSwtNDgxNjQ4MjA3XX0=
 -->
