四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -106,14 +106,33 @@ $$
 
 - 信号流逻辑：
 
-```mermaid
-graph TD
-    A[输入力 F/力矩 M] --> B[quadrotor2_system]
-    B --> C[输出状态变量 state]
-    C --> D[反馈至 PID 控制器]
-    D --> A
-    B --> A
 ```
+@startuml
+skinparam defaultFontName "Segoe UI"
+skinparam handwritten true
+
+rectangle "力F/力矩M（输入）" as A #aliceblue
+rectangle "动力学方程计算" as B #aliceblue
+database "quadrotor2_system" as C #lightcyan
+rectangle "状态变量state（输出）" as D #aliceblue
+rectangle "PID控制器" as E #aliceblue
+cloud "形成闭环" as F #lavender
+
+A --> B : 驱动
+B --> C
+C --> D : 系统响应
+D --> E : 实时反馈
+
+C -[dotted]-> F : 闭环信号
+F -[dotted]-> A : 纠偏输入
+
+note right of F
+  ​**闭环特性**​
+  虚线路径表示动态调节过程
+  持续优化系统输出
+end note
+
+@enduml
 - **技术含义**  
   - 状态反馈：实时数据驱动闭环控制。  
 
@@ -170,7 +189,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTg2MTQ5ODM2LDY3ODUxMDY2OSwtMTQ3OD
-MzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1
-NSwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbLTE3ODgwODc3ODgsNjc4NTEwNjY5LC0xND
+c4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYz
+NDU1LC00ODE2NDgyMDddfQ==
 -->
