--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -111,8 +111,8 @@ graph TD
     A[输入力 F/力矩 M] --> B[quadrotor2_system]
     B --> C[输出状态变量 state]
     C --> D[反馈至 PID 控制器]
-    D --> 形成闭环
-    D --> 
+    D --> 形成闭环 --> A
+   
 	
 ```
 - **技术含义**  
@@ -171,7 +171,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDg4MjcyMTQ0LDY3ODUxMDY2OSwtMTQ3OD
-MzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1
-NSwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbLTEwNzI5ODE4MzUsNjc4NTEwNjY5LC0xND
+c4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYz
+NDU1LC00ODE2NDgyMDddfQ==
 -->
