四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -107,12 +107,11 @@ $$
 - 信号流逻辑：
 
 ```mermaid
-graph TD
+   graph TD
     A[输入力 F/力矩 M] --> B[quadrotor2_system]
     B --> C[输出状态变量 state]
     C --> D[反馈至 PID 控制器]
-    D --> 形成闭环 --> A
-   
+    D -->|形成闭环| A
 	
 ```
 - **技术含义**  
@@ -171,7 +170,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNzI5ODE4MzUsNjc4NTEwNjY5LC0xND
-c4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYz
-NDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbLTIwOTg2MjQ2NDcsLTEwNzI5ODE4MzUsNj
+c4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2
+Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
 -->
