四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -108,8 +108,8 @@ $$
 
 ```mermaid
    graph TD
-    A[输入力 F/力矩 M] --> B[quadrotor2_system]
-    B --> C[输出状态变量 state]
+    A[输入力 F/力矩 M] --> B|动力学方程|
+    B --> C[quadrotor2_system]
     C --> D[反馈至 PID 控制器]
     D -->|形成闭环| A
 	
@@ -170,7 +170,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwOTg2MjQ2NDcsLTEwNzI5ODE4MzUsNj
+eyJoaXN0b3J5IjpbLTE2NTIyNTIwNzQsLTEwNzI5ODE4MzUsNj
 c4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2
 Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
 -->
