四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -108,8 +108,9 @@ $$
 
 ```mermaid
    graph TD
-    A[输入力 F/力矩 M] --> B|动力学方程|
+    A[输入力 F/力矩 M] --> |动力学方程计算|C
     B --> C[quadrotor2_system]
+    
     C --> D[反馈至 PID 控制器]
     D -->|形成闭环| A
 	
@@ -170,7 +171,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NTIyNTIwNzQsLTEwNzI5ODE4MzUsNj
-c4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2
-Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbLTU3NDIyOTM3OSwtMTA3Mjk4MTgzNSw2Nz
+g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
+OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
