--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -102,20 +102,20 @@ $$
 
 	- `输⼊输出`：通过输⼊模块`力F`和`力矩M`驱动系统，输出⻜⾏器的实时状态（如位置、姿态）。
 
- (2). 关键参数与设计
+ (2)  关键参数与设计
 
 - 信号流逻辑：
 
 ```mermaid
    graph TD
     A[输入力 F/力矩 M] --> |动力学方程计算|C
-    B --> C[quadrotor2_system]
-    
-    C --> D[反馈至 PID 控制器]
+    C[quadrotor2_system]
+    C --> |输出状态变量 state|D[反馈至 PID 控制器]
     D -->|形成闭环| A
 	
 ```
-- **技术含义**  
+
+(3)  **技术含义**  
   - 状态反馈：实时数据驱动闭环控制。  
 
 #### 2. PID控制器设计
@@ -171,7 +171,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU3NDIyOTM3OSwtMTA3Mjk4MTgzNSw2Nz
-g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
-OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbLTE1MjI5Mzc0NTQsLTEwNzI5ODE4MzUsNj
+c4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2
+Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
 -->
