--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -89,7 +89,7 @@ $$
 
 ### 讲解
 
-#### 1. 二维四旋翼动态系统
+### 1. 二维四旋翼动态系统
 
 (1) **整体架构**
   
@@ -116,9 +116,11 @@ $$
 ```
 
 (3)  **技术含义**  
-  - 状态反馈：实时数据驱动闭环控制。  
 
-#### 2. PID控制器设计
+  - 状态反馈：实时数据驱动闭环控制。  
+  ![输入图片说明](/imgs/2025-05-11/StHZAzpZJ0RAThfe.png)
+
+### 2. PID控制器设计
 (1) **整体架构**  
   - 双闭环控制：外环（位置误差）和内环（姿态响应）。  
   - 核心模块：  
@@ -171,7 +173,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MjI5Mzc0NTQsLTEwNzI5ODE4MzUsNj
-c4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2
-Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbLTg5MjY3Mzk1MSwtMTA3Mjk4MTgzNSw2Nz
+g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
+OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
