四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -118,7 +118,7 @@ $$
 (3)  **技术含义**  
 
   - 状态反馈：实时数据驱动闭环控制。  
-  ![输入图片说明](/imgs/2025-05-11/StHZAzpZJ0RAThfe.png)
+  ![二维四旋翼动态系统](/imgs/2025-05-11/StHZAzpZJ0RAThfe.png '二维四旋翼动态系统')
 
 ### 2. PID控制器设计
 (1) **整体架构**  
@@ -173,7 +173,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg5MjY3Mzk1MSwtMTA3Mjk4MTgzNSw2Nz
-g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
-OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbNjA0MzY0NzE0LC0xMDcyOTgxODM1LDY3OD
+UxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5
+ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
 -->
