四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -121,7 +121,11 @@ $$
   ![二维四旋翼动态系统](/imgs/2025-05-11/StHZAzpZJ0RAThfe.png '二维四旋翼动态系统')
 
 ### 2. PID控制器设计
-(1) **整体架构**  
+
+(1)  **整体架构**  
+
+- 模型名称： quadrotor2_circle/PID控制器
+实现⾼度（z/y⽅向）和横滚⻆（phi）的双闭环控制。
   - 双闭环控制：外环（位置误差）和内环（姿态响应）。  
   - 核心模块：  
     - PID模块：处理高度和横向位置误差。  
@@ -173,7 +177,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjA0MzY0NzE0LC0xMDcyOTgxODM1LDY3OD
-UxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5
-ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbMTkyNTc1NzMyOSwtMTA3Mjk4MTgzNSw2Nz
+g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
+OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
