四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -126,10 +126,10 @@ $$
 
 - 模型名称： quadrotor2_circle/PID控制器
 实现⾼度（z/y⽅向）和横滚⻆（phi）的双闭环控制。
-  - 双闭环控制：外环（位置误差）和内环（姿态响应）。  
+
   - 核心模块：  
-    - PID模块：处理高度和横向位置误差。  
-    - 限幅模块：约束输出\( F \)和\( M \)。  
+    - `PID`模块：包含两组PID控制器，分别为处理⾼度误差（ z_d - z ）的位置环与横向位置误差（ y_d - y ）及⻆度（ phi ）共同组成的姿态环
+    - `限幅`模块：对输出推⼒ F 和⼒矩 M 进⾏约束
 
 - **抗饱和设计**  
   - 防止控制量超出电机能力范围。  
@@ -177,7 +177,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkyNTc1NzMyOSwtMTA3Mjk4MTgzNSw2Nz
+eyJoaXN0b3J5IjpbMTAzMzQ3NjE5MywtMTA3Mjk4MTgzNSw2Nz
 g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
 OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
