四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -129,10 +129,32 @@ $$
 
   - 核心模块：  
     - `PID`模块：包含两组PID控制器，分别为处理⾼度误差（ z_d - z ）的位置环与横向位置误差（ y_d - y ）及⻆度（ phi ）共同组成的姿态环
-    - `限幅`模块：对输出推⼒ F 和⼒矩 M 进⾏约束
+    - `限幅`模块：对输出推⼒`F`和⼒矩`M`进⾏约束
+    - `加减法`模块：计算期望值与实际状态的误差（ error 信号）
 
-- **抗饱和设计**  
-  - 防止控制量超出电机能力范围。  
+2. 关键参数与设计
+
+控制逻辑：
+
+1. 输⼊：期望⾼度 z_d 、期望横向位置 y_d
+
+2. 误差计算：通过减法模块⽣成 error 信号。
+
+3. PID调节：将误差信号转换为控制量（ F 和 M ），并通过限幅模块防⽌超调。
+
+4. 输出：控制量传递给动态系统模型驱动⻜⾏器。
+
+抗饱和设计：限幅模块避免控制器输出超出电机能⼒范围。
+
+3. 技术含义
+
+双闭环控制：
+
+外环：位置控制（如⾼度z/y）⽣成⻆度期望值。
+
+内环：姿态控制（如横滚⻆phi）快速响应⻆度变化进⽽调整位置。
+
+解耦设计：独⽴PID控制器处理不同⾃由度，简化多变量系统控制
 
 #### 3. 协同工作原理
 - **信号闭环流程**  
@@ -177,7 +199,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAzMzQ3NjE5MywtMTA3Mjk4MTgzNSw2Nz
-g1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3
-OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3OD
+UxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5
+ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
 -->
