四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -132,7 +132,7 @@ $$
     - `限幅`模块：对输出推⼒`F`和⼒矩`M`进⾏约束
     - `加减法`模块：计算期望值与实际状态的误差（ error 信号）
 
-2. 关键参数与设计
+(2) 关键参数与设计
 
 控制逻辑：
 
@@ -199,7 +199,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3OD
-UxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5
-ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbNDE1MjczNTczLC00NjgxNDU3OCwtMTA3Mj
+k4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3
+MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
