四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -132,19 +132,19 @@ $$
     - `限幅`模块：对输出推⼒`F`和⼒矩`M`进⾏约束
     - `加减法`模块：计算期望值与实际状态的误差（ error 信号）
 
-(2) 关键参数与设计
+(2) **关键参数与设计**
 
-控制逻辑：
+- 控制逻辑：
 
-1. 输⼊：期望⾼度 z_d 、期望横向位置 y_d
+	- 输⼊：期望⾼度 z_d 、期望横向位置 y_d
 
-2. 误差计算：通过减法模块⽣成 error 信号。
+	- 误差计算：通过减法模块⽣成`error`信号。
 
-3. PID调节：将误差信号转换为控制量（ F 和 M ），并通过限幅模块防⽌超调。
+	- PID调节：将误差信号转换为控制量（ F 和 M ），并通过限幅模块防⽌超调。
 
-4. 输出：控制量传递给动态系统模型驱动⻜⾏器。
+	- 输出：控制量传递给动态系统模型驱动⻜⾏器。
 
-抗饱和设计：限幅模块避免控制器输出超出电机能⼒范围。
+- 抗饱和设计：限幅模块避免控制器输出超出电机能⼒范围。
 
 3. 技术含义
 
@@ -199,7 +199,8 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDE1MjczNTczLC00NjgxNDU3OCwtMTA3Mj
-k4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3
-MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbMTA2ODkwMjU3OSwtNDY4MTQ1NzgsLTEwNz
+I5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUw
+NzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ
+==
 -->
