四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -140,17 +140,17 @@ $$
 
 	- 误差计算：通过减法模块⽣成`error`信号。
 
-	- PID调节：将误差信号转换为控制量（ F 和 M ），并通过限幅模块防⽌超调。
+	- PID调节：将误差信号转换为控制量（`F`和`M`），并通过`限幅`模块防⽌超调。
 
 	- 输出：控制量传递给动态系统模型驱动⻜⾏器。
 
-- 抗饱和设计：限幅模块避免控制器输出超出电机能⼒范围。
+- 抗饱和设计：`限幅`模块避免控制器输出超出电机能⼒范围。
 
-3. 技术含义
+(3) **技术含义**
 
-双闭环控制：
+- 双闭环控制：
 
-外环：位置控制（如⾼度z/y）⽣成⻆度期望值。
+- 外环：位置控制（如⾼度z/y）⽣成⻆度期望值。
 
 内环：姿态控制（如横滚⻆phi）快速响应⻆度变化进⽽调整位置。
 
@@ -199,7 +199,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA2ODkwMjU3OSwtNDY4MTQ1NzgsLTEwNz
+eyJoaXN0b3J5IjpbLTI5NTc4MDgxNCwtNDY4MTQ1NzgsLTEwNz
 I5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUw
 NzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ
 ==
