四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -37,13 +37,13 @@ $$
 4. **y方向加速度**  
    - 物理意义：由推力的水平分量产生  
    - 关键参数：  
-     - \( F \)：旋翼总推力  
-     - \( ϕ \)：俯仰角  
+     - ( F )：旋翼总推力  
+     - ( ϕ )：俯仰角  
 
 5. **z方向加速度**  
    - 物理意义：由推力的垂直分量减去重力加速度  
    - 关键参数：
-	   -  \( g \)：重力加速度  (向下作用)
+	   -  ( g \)：重力加速度  (向下作用)
    - 动⼒学层级：平移动⼒学⽅程（含重⼒补偿）
 
 6. **角加速度与力矩**  
@@ -150,13 +150,13 @@ $$
 
 - 双闭环控制：
 
-- 外环：位置控制（如⾼度z/y）⽣成⻆度期望值。
+	- 外环：位置控制（如⾼度z/y）⽣成⻆度期望值。
 
-内环：姿态控制（如横滚⻆phi）快速响应⻆度变化进⽽调整位置。
+	- 内环：姿态控制（如横滚⻆phi）快速响应⻆度变化进⽽调整位置。
 
-解耦设计：独⽴PID控制器处理不同⾃由度，简化多变量系统控制
+- 解耦设计：独⽴PID控制器处理不同⾃由度，简化多变量系统控制
 
-#### 3. 协同工作原理
+### 3. 协同工作原理
 - **信号闭环流程**  
   1. 测量状态 → 2. 计算误差 → 3. 生成控制信号 → 4. 动态系统响应 → 5. 更新状态。  
 
@@ -199,8 +199,8 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NTc4MDgxNCwtNDY4MTQ1NzgsLTEwNz
-I5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUw
-NzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ
-==
+eyJoaXN0b3J5IjpbLTExMDk4MTMyNzUsLTQ2ODE0NTc4LC0xMD
+cyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1
+MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX
+0=
 -->
