四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -43,14 +43,14 @@ $$
 5. **z方向加速度**  
    - 物理意义：由推力的垂直分量减去重力加速度  
    - 关键参数：
-	   -  ( g \)：重力加速度  (向下作用)
+	   -  ( g )：重力加速度  (向下作用)
    - 动⼒学层级：平移动⼒学⽅程（含重⼒补偿）
 
 6. **角加速度与力矩**  
    - 物理意义：角加速度由力矩驱动，
    - 关键参数：  
-     - \( M \)：力矩（控制输⼊）
-     - \( J \)：转动惯量  
+     - ( M )：力矩（控制输⼊）
+     - (  J )：转动惯量  
 	- 动⼒学层级：旋转动⼒学⽅程（⻆动量定理）
 ---
 
@@ -128,9 +128,9 @@ $$
 实现⾼度（z/y⽅向）和横滚⻆（phi）的双闭环控制。
 
   - 核心模块：  
-    - `PID`模块：包含两组PID控制器，分别为处理⾼度误差（ z_d - z ）的位置环与横向位置误差（ y_d - y ）及⻆度（ phi ）共同组成的姿态环
+    - `PID`模块：包含两组PID控制器，分别为处理⾼度误差（`z_d - z`）的位置环与横向位置误差（`y_d - y`）及⻆度（`ϕ`)共同组成的姿态环
     - `限幅`模块：对输出推⼒`F`和⼒矩`M`进⾏约束
-    - `加减法`模块：计算期望值与实际状态的误差（ error 信号）
+    - `加减法`模块：计算期望值与实际状态的误差（`error`信号）
 
 (2) **关键参数与设计**
 
@@ -199,8 +199,8 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDk4MTMyNzUsLTQ2ODE0NTc4LC0xMD
-cyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1
-MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX
-0=
+eyJoaXN0b3J5IjpbLTk2Nzc5MjkwNywtNDY4MTQ1NzgsLTEwNz
+I5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUw
+NzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ
+==
 -->
