四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -152,9 +152,11 @@ $$
 
 	- 外环：位置控制（如⾼度z/y）⽣成⻆度期望值。
 
-	- 内环：姿态控制（如横滚⻆phi）快速响应⻆度变化进⽽调整位置。
+	- 内环：姿态控制（如横滚⻆ϕ）快速响应⻆度变化进⽽调整位置。
 
 - 解耦设计：独⽴PID控制器处理不同⾃由度，简化多变量系统控制
+
+![ PID控制器 ](/imgs/2025-05-11/z8gxNJNOZHcS9tFd.png 'PID控制器')
 
 ### 3. 协同工作原理
 - **信号闭环流程**  
@@ -199,8 +201,8 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk2Nzc5MjkwNywtNDY4MTQ1NzgsLTEwNz
-I5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2LC0xNTI3NDUw
-NzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00ODE2NDgyMDddfQ
-==
+eyJoaXN0b3J5IjpbLTE4OTY4NzgzMDQsLTQ2ODE0NTc4LC0xMD
+cyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1
+MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX
+0=
 -->
