四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -159,7 +159,7 @@ $$
 ![ PID控制器 ](/imgs/2025-05-11/z8gxNJNOZHcS9tFd.png 'PID控制器')
 
 ### 3. 协同工作原理
-- **信号闭环流程**  
+(1) **信号闭环流程**  
   1. 测量状态 → 2. 计算误差 → 3. 生成控制信号 → 4. 动态系统响应 → 5. 更新状态。  
 
 ---
@@ -201,8 +201,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4OTY4NzgzMDQsLTQ2ODE0NTc4LC0xMD
-cyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2NiwtMTUyNzQ1
-MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtNDgxNjQ4MjA3XX
-0=
+eyJoaXN0b3J5IjpbMTE4ODIxOTM5LC00NjgxNDU3OCwtMTA3Mj
+k4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3
+MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
 -->
