--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -159,9 +159,19 @@ $$
 ![ PID控制器 ](/imgs/2025-05-11/z8gxNJNOZHcS9tFd.png 'PID控制器')
 
 ### 3. 协同工作原理
-(1) **信号闭环流程**  
-  1. 测量状态 → 2. 计算误差 → 3. 生成控制信号 → 4. 动态系统响应 → 5. 更新状态。  
 
+(1) **信号闭环流程**  
+
+```mermaid
+  graph TD
+    A[开始] --> B[测量状态 state]
+    B --> C[计算误差 error]
+    C --> D[生成控制信号]
+    D --> E[动态系统响应]
+    E --> F[更新状态 state]
+    F --> G[回到计算误差 error]
+    F --> C  
+```
 ---
 
 ### 五、绘制二维四旋翼视觉跟踪代码实现
@@ -201,7 +211,8 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE4ODIxOTM5LC00NjgxNDU3OCwtMTA3Mj
-k4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIxNjYsLTE1Mjc0NTA3
-MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbLTEyMDExNjE2MDYsMTE4ODIxOTM5LC00Nj
+gxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIx
+NjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLT
+Q4MTY0ODIwN119
 -->
