四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -170,8 +170,14 @@ $$
     D --> E[动态系统响应]
     E --> F[更新状态 state]
     F --> G[回到计算误差 error]
-    F --> C  
+    G --> C  
 ```
+()⼯程实现⽬标：
+
+使四旋翼⻜⾏器在⼆维空间内以圆形轨迹运动。
+
+通过PID参数整定（如⽐例系数K、积分时间time）优化动态响应。
+
 ---
 
 ### 五、绘制二维四旋翼视觉跟踪代码实现
@@ -211,7 +217,7 @@ for i = 1:size(t)
 end
 end
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMDExNjE2MDYsMTE4ODIxOTM5LC00Nj
+eyJoaXN0b3J5IjpbLTEyOTg3NDUwNTMsMTE4ODIxOTM5LC00Nj
 gxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIx
 NjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLT
 Q4MTY0ODIwN119
