四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -182,7 +182,10 @@ $$
 
 ### 五、绘制二维四旋翼视觉跟踪代码实现
 
+![绘制二维四旋翼](/imgs/2025-05-11/bwu21dnCJyqzVvot.png '绘制二维四旋翼')
+
 #### S代码解析
+
 ```matlab
 function draw_quadrotor_2D(t, position, angle, traj)
 %% 定义函数参数
@@ -216,8 +219,10 @@ for i = 1:size(t)
     drawnow;
 end
 end
+
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTMwNDg0OTMsMTE4ODIxOTM5LC00Nj
+eyJoaXN0b3J5IjpbLTE1OTQ4NDk3MzAsMTE4ODIxOTM5LC00Nj
 gxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIx
 NjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLT
 Q4MTY0ODIwN119
