四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -188,7 +188,8 @@ $$
 
 ```matlab
 function draw_quadrotor_2D(t, position, angle, traj)
-%% 定义函数参数
+%% %%定义函数 draw_quadrotor_2D，输入参数包括时间t、位置position、滚转角angle和参考轨迹traj
+
 % 输入参数:
 %   t: 时间序列 [n×1]
 %   position: 二维位置坐标 [n×2]
@@ -222,8 +223,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTQ4NDk3MzAsMTE4ODIxOTM5LC00Nj
-gxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIx
-NjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLT
-Q4MTY0ODIwN119
+eyJoaXN0b3J5IjpbNzIwOTg3ODQsMTE4ODIxOTM5LC00NjgxND
+U3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIxNjYs
+LTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MT
+Y0ODIwN119
 -->
