四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -196,6 +196,18 @@ function draw_quadrotor_2D(t, position, angle, traj)
 %   angle: 滚转角 [n×1]
 %   traj: 参考轨迹坐标 [n×2]
 
+| 参数名 | 数据类型 | 物理意义														 |
+
+| t | n×1向量 | 时间序列 |
+
+| position | n×2矩阵 | 四旋翼二维位置坐标 (y, z) 										|
+
+| angle | n×1向量 | 滚转角 φ（绕 x 轴旋转角度） |
+
+| traj | n×2矩阵 | 参考轨迹的 (y_ref, z_ref) 二维坐标 |
+
+----------------------------------------------------------------------
+
 %% 初始化图形窗口
 fig = figure('Name', 'Quadrotor_2D', 'Position', [500 250 400 300]);
 ax = axes;
@@ -223,8 +235,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzIwOTg3ODQsMTE4ODIxOTM5LC00NjgxND
-U3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2NjksLTE0NzgzMzIxNjYs
-LTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtNDIzNjM0NTUsLTQ4MT
-Y0ODIwN119
+eyJoaXN0b3J5IjpbLTc0MjMyMjc5NywxMTg4MjE5MzksLTQ2OD
+E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
+NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
+gxNjQ4MjA3XX0=
 -->
