四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -198,17 +198,17 @@ function draw_quadrotor_2D(t, position, angle, traj)
 
 | 参数名 	| 数据类型	 | 物理意义												 |
 
-| t 		| n×1向量			 | 时间序列 													 |
+| t 		| n×1向量	 | 时间序列 												 |
 
-| position | n×2矩阵 | 四旋翼二维位置坐标 (y, z) 									 |
+| position  | n×2矩阵    | 四旋翼二维位置坐标 (y, z) 								 |
 
-| angle | n×1向量 | 滚转角 φ（绕 x 轴旋转角度） |
+| angle 	| n×1向量 	| 滚转角 φ（绕 x 轴旋转角度）								 |
 
-| traj | n×2矩阵 | 参考轨迹的 (y_ref, z_ref) 二维坐标 |
+| traj 		| n×2矩阵 	| 参考轨迹的 (y_ref, z_ref) 二维坐标 						 |
 
 ----------------------------------------------------------------------------------
 
-%% 初始化图形窗口
+%%% 坐标轴属性设置
 fig = figure('Name', 'Quadrotor_2D', 'Position', [500 250 400 300]);
 ax = axes;
 axis equal;
@@ -235,8 +235,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjg2OTU2Mzk5LDExODgyMTkzOSwtNDY4MT
-Q1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2
-LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00OD
-E2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbMTk3OTc0MzU4NCwxMTg4MjE5MzksLTQ2OD
+E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
+NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
+gxNjQ4MjA3XX0=
 -->
