四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -210,9 +210,17 @@ function draw_quadrotor_2D(t, position, angle, traj)
 
 %%% 坐标轴属性设置
 fig = figure('Name', 'Quadrotor_2D', 'Position', [500 250 400 300]);
+% 创建独立绘图窗口
 ax = axes;
+% 定义坐标轴
 axis equal;
+% 保持纵横比一致
 
+%% 功能解析:
+%% 创建一个独立的图形窗口，命名为 `Quadrotor_2D`，窗口位置为[500, 250]，大小为400×
+%% 定义坐标轴ax，并设置纵横比一致（axis equal），确保图形不变形。
+
+----------------------------------------------------------------------
 %% 绘制参考轨迹
 if nargin > 3
     plot(ax, traj(:,1), traj(:,2), '-k', 'LineWidth', 2);
@@ -235,7 +243,7 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk3OTc0MzU4NCwxMTg4MjE5MzksLTQ2OD
+eyJoaXN0b3J5IjpbMjA3NzQ1OTA2MSwxMTg4MjE5MzksLTQ2OD
 E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
 NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
 gxNjQ4MjA3XX0=
