四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -217,11 +217,23 @@ axis equal;
 % 保持纵横比一致
 
 %% 功能解析:
-%% 创建一个独立的图形窗口，命名为 `Quadrotor_2D`，窗口位置为[500, 250]，大小为400×
+%% 创建一个独立的图形窗口，命名为 `Quadrotor_2D`，窗口位置为[500, 250]，大小为400×300
 %% 定义坐标轴ax，并设置纵横比一致（axis equal），确保图形不变形。
 
 ----------------------------------------------------------------------
-%% 绘制参考轨迹
+%%% 绘制参考轨迹
+if nargin < 3
+
+fprintf(" 输入参数：\n\t t: 时间[n*1]\n\t position: (y, z)位置[n*2]\n\t angle
+
+return;
+
+end
+
+%% 功能:若输入参数少于 3 个，直接返回。
+
+%% nargin是MATLAB中用来获取函数输入参数个数的内置函数
+
 if nargin > 3
     plot(ax, traj(:,1), traj(:,2), '-k', 'LineWidth', 2);
 end
@@ -243,8 +255,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA3NzQ1OTA2MSwxMTg4MjE5MzksLTQ2OD
-E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
-NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
-gxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbMjg4NjI1NzY2LDExODgyMTkzOSwtNDY4MT
+Q1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2
+LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00OD
+E2NDgyMDddfQ==
 -->
