四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -231,8 +231,11 @@ end
 
 if nargin > 3
     plot(ax, traj(:,1), traj(:,2), '-k', 'LineWidth', 2);
+% 跟踪轨迹
 end
+%% 功能：若输入了参考轨迹traj，则在坐标轴ax上以黑色虚线绘制参考轨迹。
 
+---------------------------------------------------------------
 %% 动态更新四旋翼姿态
 for i = 1:size(t)
     quadrotor_pos = position(i,:)';
@@ -250,8 +253,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2Nzg4OTQxOCwxMTg4MjE5MzksLTQ2OD
-E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
-NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
-gxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbODg4OTAxMTk0LDExODgyMTkzOSwtNDY4MT
+Q1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2
+LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00OD
+E2NDgyMDddfQ==
 -->
