四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -236,6 +236,41 @@ end
 %% 功能：若输入了参考轨迹traj，则在坐标轴ax上以黑色虚线绘制参考轨迹。
 
 ---------------------------------------------------------------
+%% 动态调整坐标轴范围
+y_lim_max = ceil(max(position(:,1))) + 2;
+%% 取四旋翼在 y 轴方向的最大位置值，向上取整后加2，确保显示范围比实际数据最大值略大，避
+%% 下方减号“-”同理
+y_lim_min = floor(min(position(:,1))) - 2;
+z_lim_max = ceil(max(position(:,2))) + 2;
+z_lim_min = floor(min(position(:,2))) - 2;
+
+set(ax,'looseinset',get(ax,'tightinset'),'nextplot','add','XGrid','on','YGr
+
+%% “looseinset = get(ax, 'tightinset')”：消除坐标轴与图形窗口之间的多余空白，使绘
+
+%% “nextplot = 'add'”：允许后续绘图（如轨迹线）叠加在当前坐标轴上，避免覆盖已有内容
+
+%% “XGrid = 'on', YGrid = 'on'”：显示网格线
+
+'Xlim',[y_lim_min y_lim_max],'Ylim',[z_lim_min z_lim_max],...
+
+'XTick',y_lim_min:1:y_lim_max,'YTick',z_lim_min:1:z_lim_max);
+
+%% “XTick = y_lim_min:1:y_lim_max“：将 y 轴刻度设为 1 米间隔，z轴同理
+
+%% 坐标标签与标题美化
+
+title(ax,'2D\_Quadrotor','Fontname', 'Times New Roman','FontSize',12);
+
+%% 设置标题："2D_Quadrotor"，字体：Times New Roman 并调整字号为12
+
+xlabel(ax,'y(m)','interpreter','latex','Fontname', 'Times New Roman','FontS
+
+ylabel(ax,'z(m)','interpreter','latex','Fontname', 'Times New Roman','FontS
+
+%% 标注x轴与y轴名称为 y(m) 和 z(m)
+
+----------------------------------------------------------------------
 %% 动态更新四旋翼姿态
 for i = 1:size(t)
     quadrotor_pos = position(i,:)';
@@ -253,8 +288,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODg4OTAxMTk0LDExODgyMTkzOSwtNDY4MT
-Q1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5LC0xNDc4MzMyMTY2
-LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLTQyMzYzNDU1LC00OD
-E2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbMTUyMTcwOTk2NywxMTg4MjE5MzksLTQ2OD
+E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
+NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
+gxNjQ4MjA3XX0=
 -->
