四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -244,7 +244,10 @@ y_lim_min = floor(min(position(:,1))) - 2;
 z_lim_max = ceil(max(position(:,2))) + 2;
 z_lim_min = floor(min(position(:,2))) - 2;
 
-set(ax,'looseinset',get(ax,'tightinset'),'nextplot','add','XGrid','on','YGr
+set(ax, 'looseinset', get(ax, 'tightinset'), 'nextplot', 'add', ...
+    'XGrid', 'on', 'YGrid', 'on', 'Xlim', [y_lim_min y_lim_max], ...
+    'Ylim', [z_lim_min z_lim_max], 'XTick', y_lim_min:1:y_lim_max, ...
+    'YTick', z_lim_min:1:z_lim_max);
 
 %% “looseinset = get(ax, 'tightinset')”：消除坐标轴与图形窗口之间的多余空白，使绘
 
@@ -288,7 +291,7 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyMTcwOTk2NywxMTg4MjE5MzksLTQ2OD
+eyJoaXN0b3J5IjpbLTkxODg3MzAwNCwxMTg4MjE5MzksLTQ2OD
 E0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwtMTQ3ODMzMjE2
 NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00MjM2MzQ1NSwtND
 gxNjQ4MjA3XX0=
