四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -249,7 +249,7 @@ set(ax, 'looseinset', get(ax, 'tightinset'), 'nextplot', 'add', ...
     'Ylim', [z_lim_min z_lim_max], 'XTick', y_lim_min:1:y_lim_max, ...
     'YTick', z_lim_min:1:z_lim_max);
 
-%% “looseinset = get(ax, 'tightinset')”：消除坐标轴与图形窗口之间的多余空白，使绘
+%% “looseinset = get(ax, 'tightinset')”：消除坐标轴与图形窗口之间的多余空白
 
 %% “nextplot = 'add'”：允许后续绘图（如轨迹线）叠加在当前坐标轴上，避免覆盖已有内容
 
@@ -290,8 +290,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTQxMjMyMjk0LC05MTg4NzMwMDQsMTE4OD
-IxOTM5LC00NjgxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2Njks
-LTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtND
-IzNjM0NTUsLTQ4MTY0ODIwN119
+eyJoaXN0b3J5IjpbMTQzODM2MDA5NywtOTE4ODczMDA0LDExOD
+gyMTkzOSwtNDY4MTQ1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5
+LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLT
+QyMzYzNDU1LC00ODE2NDgyMDddfQ==
 -->
