四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -244,21 +244,13 @@ y_lim_min = floor(min(position(:,1))) - 2;
 z_lim_max = ceil(max(position(:,2))) + 2;
 z_lim_min = floor(min(position(:,2))) - 2;
 
-set(ax, 'looseinset', get(ax, 'tightinset'), 'nextplot', 'add', ...
-    'XGrid', 'on', 'YGrid', 'on', 'Xlim', [y_lim_min y_lim_max], ...
-    'Ylim', [z_lim_min z_lim_max], 'XTick', y_lim_min:1:y_lim_max, ...
-    'YTick', z_lim_min:1:z_lim_max);
-
+set(ax, 'looseinset', get(ax, 'tightinset'), 'nextplot', 'add', ...'XGrid', 'on', 'YGrid', 'on',
 %% “looseinset = get(ax, 'tightinset')”：消除坐标轴与图形窗口之间的多余空白
-
 %% “nextplot = 'add'”：允许后续绘图（如轨迹线）叠加在当前坐标轴上，避免覆盖已有内容
-
 %% “XGrid = 'on', YGrid = 'on'”：显示网格线
 
 'Xlim',[y_lim_min y_lim_max],'Ylim',[z_lim_min z_lim_max],...
-
 'XTick',y_lim_min:1:y_lim_max,'YTick',z_lim_min:1:z_lim_max);
-
 %% “XTick = y_lim_min:1:y_lim_max“：将 y 轴刻度设为 1 米间隔，z轴同理
 
 %% 坐标标签与标题美化
@@ -290,8 +282,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzODM2MDA5NywtOTE4ODczMDA0LDExOD
-gyMTkzOSwtNDY4MTQ1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5
-LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLT
-QyMzYzNDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbODM3MTUzNDcsLTkxODg3MzAwNCwxMTg4Mj
+E5MzksLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwt
+MTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00Mj
+M2MzQ1NSwtNDgxNjQ4MjA3XX0=
 -->
