四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -255,12 +255,9 @@ set(ax, 'looseinset', get(ax, 'tightinset'), 'nextplot', 'add', ...'XGrid', 'on'
 
 %% 坐标标签与标题美化
 title(ax,'2D\_Quadrotor','Fontname', 'Times New Roman','FontSize',12);
-
-%% 设置标题："2D_Quadrotor"，字体：Times New Roman 并调整字号为12
-
-xlabel(ax,'y(m)','interpreter','latex','Fontname', 'Times New Roman','FontS
-
-ylabel(ax,'z(m)','interpreter','latex','Fontname', 'Times New Roman','FontS
+%% 设置标题："2D_Quadrotor"，字体:'Times New Roman'并调整字号为12
+xlabel(ax,'y(m)','interpreter','latex','Fontname', 'Times New Roman','FontSize', 12);
+ylabel(ax,'z(m)','interpreter','latex','Fontname', 'Times New Roman','FontSize', 12);
 
 %% 标注x轴与y轴名称为 y(m) 和 z(m)
 
@@ -282,8 +279,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM3MTUzNDcsLTkxODg3MzAwNCwxMTg4Mj
-E5MzksLTQ2ODE0NTc4LC0xMDcyOTgxODM1LDY3ODUxMDY2OSwt
-MTQ3ODMzMjE2NiwtMTUyNzQ1MDcwNiwxMTU0Njc5ODM3LC00Mj
-M2MzQ1NSwtNDgxNjQ4MjA3XX0=
+eyJoaXN0b3J5IjpbLTI0NDgzOTEzOSwtOTE4ODczMDA0LDExOD
+gyMTkzOSwtNDY4MTQ1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5
+LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLT
+QyMzYzNDU1LC00ODE2NDgyMDddfQ==
 -->
