四旋翼无人机轨迹二维跟踪控制.md updated from https://stackedit.cn/

--- a/四旋翼无人机轨迹二维跟踪控制.md
+++ b/四旋翼无人机轨迹二维跟踪控制.md
@@ -300,13 +300,15 @@ legend("参考轨迹","实际轨迹");
 ◦ 添加图例区分参考轨迹和实际轨迹。
 
 ----------------------------------------------------------------------
-v
+%% 主循环：逐帧更新四旋翼姿态
+
 for i = 1:size(t)
+% 获取当前四旋翼位置和姿态（当前状态state）
     quadrotor_pos = position(i,:)';
     phi = angle(i);
-    
-    % 旋转矩阵
-    R = [cos(phi) sin(phi); -sin(phi) cos(phi)];
+    % 2D旋转矩阵
+    R = [cos(phi) sin(phi);
+     -sin(phi) cos(phi)];
     wHb = [R quadrotor_pos; 0 0 1]; % 齐次变换矩阵
     
     % 更新图形对象
@@ -317,8 +319,8 @@ end
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgwNDIxNTIyMCwtOTE4ODczMDA0LDExOD
-gyMTkzOSwtNDY4MTQ1NzgsLTEwNzI5ODE4MzUsNjc4NTEwNjY5
-LC0xNDc4MzMyMTY2LC0xNTI3NDUwNzA2LDExNTQ2Nzk4MzcsLT
-QyMzYzNDU1LC00ODE2NDgyMDddfQ==
+eyJoaXN0b3J5IjpbNTM5MzU4MTc3LC05MTg4NzMwMDQsMTE4OD
+IxOTM5LC00NjgxNDU3OCwtMTA3Mjk4MTgzNSw2Nzg1MTA2Njks
+LTE0NzgzMzIxNjYsLTE1Mjc0NTA3MDYsMTE1NDY3OTgzNywtND
+IzNjM0NTUsLTQ4MTY0ODIwN119
 -->
